# Light-Transport

./: .gitignore  CMakeLists.txt  Makefile  README.md  design_choices.md  ray-sphere.md
reference_docs/: ray-cone.md  ray-cylinder.md  ray-sphere.md
src/: CMakeLists.txt  FileHandle.cpp  FileHandle.h  imageIO.cpp  vec3.cpp  vec3.h
src/image/: CMakeLists.txt  FileHandle.cpp  FileHandle.h  PFMImageIO.cpp  PFMImageIO.h  module.mk
src/main/: CMakeLists.txt  CSG.cpp  CSG.h  Cameras.cpp  Cameras.h  FileHandle.cpp  FileHandle.h  GFXBase.h  Geometry.cpp  Geometry.h  Interval.cpp  Interval.h  Models.h  PFMImageIO.cpp  PFMImageIO.h  Shapes.h  TestScenes.cpp  TestScenes.h  driver.cpp  main.cpp  vec3.cpp  vec3.h
src/main/Object/: Sphere.cpp  Sphere.h
src/math/: CMakeLists.txt  GFXBase.cpp  GFXBase.h  Interval.cpp  Interval.h  IntervalSet.cpp  IntervalSet.h  Span.cpp  Span.h  module.mk  vec3.cpp  vec3.h
src/object/: BaseObject.h  CMakeLists.txt  CSG.cpp  CSG.h  GFXBase.h  IntervalSet.cpp  IntervalSet.h  Span.h  Sphere.cpp  Sphere.h  module.mk
src/scene/: CMakeLists.txt  Cameras.cpp  Cameras.h  RaycastTarget.h  Scene.cpp  Scene.h  colors.h  module.mk
tests/: CMakeLists.txt  CSGTest.cpp  IntervalTest.cpp  SpanTest.cpp
